--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   <div class="form-wrap">
                     <p class="logo-name"><img class="login-logo" src="img/dice.png"></img>Dice</p>
                     <h1>Log in with your student email</h1>
-                    <h1 class="error" ng-show="error">Please enter correct information</h1>
+                    <h1 class="error" ng-show="error">{{errorMessage}}</h1>
                         <form role="form" action="javascript:;" method="post" id="login-form" autocomplete="off">
                             <div class="form-group">
                                 <label for="email" class="sr-only">Email</label>
@@ -58,6 +58,7 @@
                                 <input ng-model="loginPass" type="password" name="key" id="key" class="form-control" placeholder="Password">
                             </div>
                             <input type="submit" id="btn-login" class="btn btn-custom btn-lg btn-block" value="Log in" ng-click="login(loginEmail, loginPass)">
+                            <input type="submit" id="btn-signup" class="btn btn-custom btn-lg btn-block" value="Sign Up" ng-click="signup(loginEmail, loginPass)">
                         </form>
                         <a href="" class="forget" data-toggle="modal" data-target=".forget-modal">Forgot your password?</a>
                         <hr>
@@ -99,7 +100,7 @@
               </ul>
               <ul class="nav navbar-nav navbar-right profile-dropdown">
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">albert.toledo@my.hamptonu.edu<span class="caret"></span></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{userEmail}}<span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
                     <li><a ng-click="navigate(1)" href="#">Home</a></li>
                     <li><a ng-click="navigate(2)" href="#">Leaderboard</a></li>
